# elm-solve-deps-wasm

./: Cargo.toml  README.md
.github/workflows/: ci.yml
example/: dependency-provider-offline.js  index.js  package-lock.json  package.json
example-offline/: dependency-provider-offline.js  index.js  package-lock.json  package.json
example-online/: index.js  package-lock.json  package.json
example-online/Solver/: DependencyProvider.js  SyncGet.js  SyncGetWorker.js
src/: lib.rs  utils.rs
