[package]
name = "elm-solve-deps-wasm"
version = "1.0.0"
authors = ["Matthieu Pizenberg <matthieu.pizenberg@gmail.com>"]
edition = "2021"
description = "A dependency solver for the elm ecosystem"
repository = "https://github.com/mpizenberg/elm-solve-deps"
license = "MPL-2.0"
keywords = ["dependency", "pubgrub", "solver", "version", "elm"]
categories = ["algorithms"]

[lib]
crate-type = ["cdylib", "rlib"]

[build]
target = "wasm32-unknown-unknown"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies]
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.3.1" # for easier conversion with JsValue
js-sys = "0.3.55"
log = { version = "0.4.14", default-features = false, features = ["std"] }

elm-solve-deps = { version = "0.1.1", path = "../elm-solve-deps/elm-solve-deps-lib" }
pubgrub = { version = "0.2.1", features = ["serde"] }
serde_json = "1.0.72"
anyhow = "1.0.51"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
